# crawl-mtk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  crawl-mtk.service  data  pyproject.toml  scrapy.cfg
.github/workflows/: deploy.yml
datasette/: metadata.yaml
services/: crawl-clevertanken.service  crawl-clevertanken.timer  crawl-mtk.service  crawl-mtk.timer  crawl-tankentanken.service  crawl-tankentanken.timer  datasette.service  geocoding.service  geocoding.timer  geolocation.service  geolocation.timer
src/crawl_mtk/: items.py  middlewares.py  pipelines.py  settings.py
src/crawl_mtk/spiders/: tankentanken.py
src/crawl_mtsk/: geolocation.py  items.py  middlewares.py  pipelines.py  settings.py
src/crawl_mtsk/spiders/: clevertanken.py  tankentanken.py
tank-app/: index.html  package-lock.json  package.json  vite.config.js
tank-app/src/: app.js  main.js  style.css
tests/: test_pipelines.py
tests/fixtures/: clever_tanken_station_detail.html  clever_tanken_station_list.html  station_detail.html  station_list.html
tests/spiders/: test_clevertanken.py  test_tankentanken.py
web-app/: package-lock.json  package.json
web-app/src/: App.tsx
webapp/: app.js  index.html
