[project]
    name = "crawl-mtsk"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = ["scrapy>=2.13.3"]

[build-system]
    requires = ["uv_build>=0.8.4,<0.9.0"]
    build-backend = "uv_build"

[dependency-groups]
    dev = ["pytest>=8.4.1", "ruff>=0.12.7"]

[tool.ruff.lint]
    extend-select = ["B"]
