[project]
    name = "crawl-mtsk"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = ["geopy[aiohttp]>=2.4.1", "scrapy>=2.13.3"]

[build-system]
    requires = ["uv_build>=0.9.13,<0.10.0"]
    build-backend = "uv_build"

[tool.ruff.lint]
    extend-select = ["B"]

[tool.pytest.ini_options]
    addopts = ["--import-mode=importlib"]

[dependency-groups]
    dev = ["pytest>=8.0.0", "pytest-asyncio>=1.1.0", "pytest-cov>=4.1.0", "ruff>=0.12.8"]
